2009-10-06  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Bump version to 2.7.

2009-10-01  Raja R Harinath  <harinath@hurrynot.org>

	* scripts/Makefile.am: Use 'mv -f' instead of 'mv'.

2009-09-30  Marek Safar  <marek.safar@gmail.com>

	* runtime/Makefile.am, configure.in: Don't build 1.1 profile

2009-09-29  Ankit Jain  <jankit@novell.com>

	* mono-core.spec.in: Add Microsoft.WebApplication.targets

2009-08-29  Jonathan Pryor  <jpryor@novell.com>

	* man/mdoc-export-html.1: Document --with-profile, --with-version.

2009-09-08  Zoltan Varga  <vargaz@gmail.com>

	* acinclude.m4 (dolt_supported): Enable this for mips.

2009-08-29  Jonathan Pryor  <jpryor@novell.com>

	* man/mdoc.5: Document the new <format/> element.

2009-08-18  Zoltan Varga  <vargaz@gmail.com>

	* scripts/Makefile.am: Applied patch from Hib Eris (hib@hiberis.nl).
	Add $(SCRIPT_SUFFIX) to the name of the 'mod' tool.

2009-08-04  Miguel de Icaza  <miguel@novell.com>

	* Start the split between PLATFORM_WIN32 and TARGET_WIN32.  

	PLATFORM_WIN32 should be used to configure the runtime while
	building it.   TARGET_WIN32 is used for target execution.

	This is used by Mono's AOT cross compiler when running on Windows,
	but targetting a different operating system.    So we have to tell
	those two apart.

2009-07-24  Jb Evain  <jbevain@novell.com>

	* scripts/Makefile.am: generate a dmcs script for the 4.0 compiler
	when building the net_4_0 profile.

2009-07-24  Jb Evain  <jbevain@novell.com>

	* configure.in
	* runtime/Makefile.am
	* data/Makefile.am: create a and populate a configuration folder
	for the net_4_0 profile.

2009-07-21  Jb Evain  <jbevain@novell.com>

	* configure.in: add a --with-monotouch option.
	* runtime/Makefile.am: use it to trigger the mcs monotouch build.

2009-07-14  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add more libraries needed by the llvm backend.

2009-07-02  Jb Evain  <jbevain@novell.com>

	* scripts/Makefile.am: monolinker is now a 2.0 assembly.
