@@ -68,6 +68,7 @@ set(OTHER_SRC
 	mono-mutex.c	
 	mono-mutex.h	
 	mono-spinlock.h	
+	posix.c
 	processes.c	
 	processes.h	
 	process-private.h
