@@ -158,6 +158,8 @@ set(libmonoruntime_la_SOURCES
 	security-manager.h
 	sgen-gc.c	
 	sgen-gc.h	
+	sgen-archdep.h
+	sgen-scan-object.h
 	string-icalls.c 
 	string-icalls.h 
 	sysmath.h	
